# ai-shorts

./: .gitignore  README.md  competitor-response.json
ai-microservice/: go.mod
backend/: go.mod  go.sum  main.go
backend/database/: postgres.go
backend/models/: database.go  video.go
backend/public/: service-worker.js
backend/router/: billing.go  setup.go  video.go
backend/util/: ai.go  ai.go.old  db-functions.go  gcp.go  new_ai.go  shared.go  stitch.py  stitch_new.py  videoGen.go
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: siteConfig.ts
frontend/src/app/(dashboard)/(main)/billing/: page.tsx
frontend/src/app/(dashboard)/(main)/create/: page.tsx
frontend/src/app/(dashboard)/(main)/create/[id]/edit/: page.tsx
frontend/src/app/(dashboard)/(main)/dashboard/: page.tsx
frontend/src/components/: WebPushNotificationsCampaignSettings.tsx
frontend/src/components/ui/navigation/: MobileSidebar.tsx  sidebar.tsx
slideshow_service/: Cargo.toml
slideshow_service/src/: main.rs
tmp/: plan.md  test.py  test_expressive.py  test_sd.py
whisper-service/: main.py  requirements.txt
