[package]
name = "slideshow_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
google-cloud-storage = "0.15.0"
rand = "0.8.4"
anyhow = "1.0"
log = "0.4"